force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <description>Guest booking for a property stay</description>
    <label>Booking</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Booking Reference</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>