force-app/main/default/objects/Booking__c/fields/AppliedNightlyRate__c.field-meta.xml
<CustomField>
    <fullName>AppliedNightlyRate__c</fullName>
    <label>Applied Nightly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>