force-app/main/default/objects/Booking__c/fields/CheckInDateTime__c.field-meta.xml
<CustomField>
    <fullName>CheckInDateTime__c</fullName>
    <label>Check In Date Time</label>
    <type>DateTime</type>
</CustomField>