force-app/main/default/objects/Booking__c/fields/CheckOutDateTime__c.field-meta.xml
<CustomField>
    <fullName>CheckOutDateTime__c</fullName>
    <label>Check Out Date Time</label>
    <type>DateTime</type>
</CustomField>