force-app/main/default/objects/Booking__c/fields/TotalBookingAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalBookingAmount__c</fullName>
    <formula>TotalNights__c * AppliedNightlyRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>