force-app/main/default/objects/Booking__c/fields/TotalNights__c.field-meta.xml
<CustomField>
    <fullName>TotalNights__c</fullName>
    <formula>DATEVALUE(CheckOutDateTime__c) - DATEVALUE(CheckInDateTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>