force-app/main/default/objects/Booking__c/listViews/All_Bookings.listView-meta.xml
<ListView>
    <fullName>All_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Guest__c</columns>
    <columns>CheckInDateTime__c</columns>
    <columns>BookingStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Bookings</label>
</ListView>